tests/baselines/reference/reservedNamesInAliases.errors.txt
tests/cases/conformance/types/typeAliases/reservedNamesInAliases.ts(2,6): error TS2457: Type alias name cannot be 'any'.
tests/cases/conformance/types/typeAliases/reservedNamesInAliases.ts(3,6): error TS2457: Type alias name cannot be 'number'.
tests/cases/conformance/types/typeAliases/reservedNamesInAliases.ts(4,6): error TS2457: Type alias name cannot be 'boolean'.
tests/cases/conformance/types/typeAliases/reservedNamesInAliases.ts(5,6): error TS2457: Type alias name cannot be 'string'.
tests/cases/conformance/types/typeAliases/reservedNamesInAliases.ts(6,1): error TS2304: Cannot find name 'type'.
tests/cases/conformance/types/typeAliases/reservedNamesInAliases.ts(6,6): error TS2457: Type alias name cannot be 'void'.
tests/cases/conformance/types/typeAliases/reservedNamesInAliases.ts(6,11): error TS1109: Expression expected.
tests/cases/conformance/types/typeAliases/reservedNamesInAliases.ts(6,13): error TS2693: 'I' only refers to a type, but is being used as a value here.
tests/cases/conformance/types/typeAliases/reservedNamesInAliases.ts(7,6): error TS2457: Type alias name cannot be 'object'.


==== tests/cases/conformance/types/typeAliases/reservedNamesInAliases.ts (9 errors) ====
    interface I {}
    type any = I;
         ~~~
!!! error TS2457: Type alias name cannot be 'any'.
    type number = I;
         ~~~~~~
!!! error TS2457: Type alias name cannot be 'number'.
    type boolean = I;
         ~~~~~~~
!!! error TS2457: Type alias name cannot be 'boolean'.
    type string = I;
         ~~~~~~
!!! error TS2457: Type alias name cannot be 'string'.
    type void = I;
    ~~~~
!!! error TS2304: Cannot find name 'type'.
         ~~~~
!!! error TS2457: Type alias name cannot be 'void'.
              ~
!!! error TS1109: Expression expected.
                ~
!!! error TS2693: 'I' only refers to a type, but is being used as a value here.
    type object = I;
         ~~~~~~
!!! error TS2457: Type alias name cannot be 'object'.
    